--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/chinsun9/smooth-page-transitions#readme",
   "devDependencies": {
+    "cssnano": "^4.1.10",
     "sass": "^1.29.0"
   },
   "dependencies": {
